# BBScript-editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
depends/red-black-tree/: RBTree.cpp  RBTree.h
depends/whereami/: whereami.c
parser/: Command.cpp  Parser.cpp  Parser.h  Struct.cpp
res/static_db/BBCF/: command_db.json
src/: main.cpp
src/core/: Command.cpp  Command.h  Editor.cpp  Editor.h  Parser.cpp  Parser.h  PieceTable.cpp  PieceTable.h  Struct.cpp  Struct.h
src/gui/: CommandQML.cpp  CommandQML.h  Main.qml
static_db/BBCF/: function_db.json
